tests/frontend_tests/error_no_array_size.c
int main() {
  // error: faulty declaration syntax at 'var'
  int var[];
}
